@@ -16,5 +16,6 @@ LMC_0.1.1 {
 } LMC_0.1.0;
 
 LMC_0.1.2 {
+ bson_cursor_find;
  mongo_sync_cmd_index_*;
 } LMC_0.1.1;
